--- a/src/app/quote-history/table-quote/table-quote.component.css
+++ b/src/app/quote-history/table-quote/table-quote.component.css
@@ -1,8 +1,4 @@
 
-h1{
-    padding: 20px;
-    text-align: center;
-}
 .wrap{
     display: flex;
     justify-content: center;
@@ -16,17 +12,8 @@ h1{
     padding: 12px;
     box-shadow: 1px 1px 10px #888888;
 }
-mat-form-field {
-    margin-right: 20px;
-}
-
-.forms1 {
-    display: flex;
-    margin: 10px;
-    align-items: center;
-}
-
-.forms button{
-    margin-right: 10px;
-    width: 30%;
+.scrollTable{
+    height: 500px;;
+    overflow:scroll;
+    overflow-x:hidden;
 }
