--- a/src/app/quote-history/table-quote/table-quote.component.css
+++ b/src/app/quote-history/table-quote/table-quote.component.css
@@ -7,6 +7,7 @@
 .forms{
     justify-content: center;
     display: flex;
+    
     width: 85%;
     align-items: center;
     border-radius: 20px;
@@ -20,4 +21,9 @@
 }
 mat-slide-toggle{
     float: right;
+}
+@media (max-width:1173px) {
+    .scrollTableresponse{
+        overflow-x: scroll;
+    }
 }
